Added support for Host, IdentityGroup and Internal API calls. Updated documentation. Prepping for v0.02

--- a/Net/Cisco/ACS/Changes
+++ b/Net/Cisco/ACS/Changes
@@ -8,4 +8,9 @@ Revision history for Perl module Net::Cisco::ACS
     - Added delete function
     - Added documentation
 
+0.02 Fri Sep 01 19:12:46 2016
+    - Added support for IdentityGroup
+    - Added support for Host
+    - Added support for ServiceLocation, Version and ErrorMessage
+    - Added LOTS of documentation
 
