--- a/Net/Cisco/ACS/README
+++ b/Net/Cisco/ACS/README
@@ -1,15 +1,3 @@
-pod2text Net::Cisco::ACS.pm > README
+Net::Cisco::ACS - Access Cisco ACS functionality through REST API
 
-If this is still here it means the programmer was too lazy to create the readme file.
-
-You can create it now by using the command shown above from this directory.
-
-At the very least you should be able to use this set of instructions
-to install the module...
-
-perl Build.PL
-./Build
-./Build test
-./Build install
-
-If you are on a windows box you should use 'nmake' rather than 'make'.
+See Perldoc generated documentation for each module.
