Fixes in XML parsing. Fix for SSL module dependency

--- a/Net/Cisco/ACS/Changes
+++ b/Net/Cisco/ACS/Changes
@@ -17,3 +17,7 @@ Revision history for Perl module Net::Cisco::ACS
 0.03 Mon Oct 17 19:30:00 2016
     - Extended functionality of create and update
     - Fixed some POD
+
+0.04 Mon Jan 26 22:50:00 2017
+    - Fix in XML parsing
+    - Fix for HTTPS module dependency - LWP::Protocol::https
